[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Menus/buttons/startButtons.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/menus.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Menus/logo.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/logo.png" type="Texture" id=5]
[ext_resource path="res://scenes/Menus/inputOptions.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )
main_buttons = NodePath("startButtons")
newGame = NodePath("startButtons/vBoxContainer/newGame")
loadGame = NodePath("startButtons/vBoxContainer/loadGame")
options = NodePath("startButtons/vBoxContainer/options")
options_buttons = NodePath("inputOptions")
sfx = NodePath("audio/sfx")
sfx2 = NodePath("audio/sfx2")

[node name="logo" parent="." instance=ExtResource( 4 )]
texture = ExtResource( 5 )
expand = false

[node name="startButtons" parent="." instance=ExtResource( 1 )]
position = Vector2( 62, 263 )

[node name="vBoxContainer" parent="startButtons" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="newGame" parent="startButtons/vBoxContainer" index="0"]
margin_right = 93.0

[node name="loadGame" parent="startButtons/vBoxContainer" index="1"]
margin_right = 93.0

[node name="options" parent="startButtons/vBoxContainer" index="2"]
margin_right = 93.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="startButtons"]
position = Vector2( 39.5, 40 )
scale = Vector2( 3.95, 3 )

[node name="inputOptions" parent="." instance=ExtResource( 6 )]
script = ExtResource( 2 )

[node name="audio" type="Node" parent="."]

[node name="sfx" type="AudioStreamPlayer" parent="audio"]

[node name="sfx2" type="AudioStreamPlayer" parent="audio"]

[connection signal="button_up" from="startButtons/vBoxContainer/newGame" to="." method="_on_newGame_button_up"]
[connection signal="screen_entered" from="startButtons/VisibilityNotifier2D" to="startButtons" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="startButtons/VisibilityNotifier2D" to="startButtons" method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="startButtons"]
